--- a/style.css
+++ b/style.css
@@ -1,36 +1,66 @@
 body {
     text-align: center;
-    background: linear-gradient(#B388FF 0%, #FFC107 100%);
 }
 
-p {
-    text-align: :center;
+#welcome {
+    color: #FFFFFF;
+    bottom: 0;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
+    display: table;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
 }
 
-h1 {
+#bio {
+    font-family: 'Cinzel Decorative', cursive;
+    padding: 50px;
     text-align: center;
 }
 
-.menu{
-    list-style: none;
+h1 {
+    font-size: 40px;
     font-family: sans-serif;
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    z-index:10;
-    cursor:pointer;
-    
-        
-    }
-#plant:hover{
-	transform: scale(1.3)
-		transition: transform.2s;
-	border: 10px solid #AAAAAA;}
-.menu:hover{
-	transform: scale(1.3)
-	
-	
+    font-weight: 300;
 }
-	
 
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
+}
+
+#contact iframe {
+    width: 100%;
+}
+
+.contact_1 h3 {
+    display: inline;
+}
+
+.contact_1 a {
+    text-shadow: none;
+}
+
+#videos iframe {
+    width: 80%;
+}
+
+input {
+    background: grey;
+}
+.profile{
+	border: 20px	
+}
+.row::after{
+	content:"";
+	clear: both;
+	display: table;
+}
+.travel_mainDiv{
+	float:left;
+	width: 33.33%
+	
+	
 }
